Bug 298726 - Unable to map accented key (ö on a Finnish keyboard) in Vi-mode
Summary: Unable to map accented key (ö on a Finnish keyboard) in Vi-mode
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: Vi Input Mode (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-24 09:09 UTC by tlauniainen
Modified: 2013-12-29 15:32 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.13
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tlauniainen 2012-04-24 09:09:35 UTC
Mapping an accented character on my Finnish keyboard (the letter ö) has no effect. Other mappings work fine.

Reproducible: Always

Steps to Reproduce:
1. Go to the mapping list in Vi-mode preferences
2. Map an accented character to some command (say ":")
3. In the normal mode, press the key that was just mapped
Actual Results:  
Nothing happens.

Expected Results:  
The mapped command should be executed.
Comment 1 Dominik Haumann 2013-08-15 13:49:07 UTC
tlauniainen: can you please test again with latest Kate by following http://kate-editor.org/get-it/ ?
Comment 2 Lars Ivar Igesund 2013-09-07 09:47:03 UTC
I have this issue too, only that my problematic key/character is 'ø'.

I've had a similar issues with the FakeVim plugin in QtCreator, and part of the resolutions there has been bug fixes in Qt itself, handling non-ASCII characters properly.
Comment 3 Simon St James 2013-11-12 19:33:46 UTC
Do either of these characters require Alt Gr?
Comment 4 Lars Ivar Igesund 2013-11-12 21:13:51 UTC
On my Norwegian keyboard (and I think the Finnish too), these characters are first class letter keys, along with stuff like j, k and l.
Comment 5 Michal Humpula 2013-11-29 18:06:18 UTC
tested on switched keyboard layout to Finnish with KDE config. On finish keyboard the "ö" is regular key. Moreover in the non-vi mode of kate the character gets inserted to text as expected. In vi-mode insert mode the ";" (english key) is inserted instead.
Comment 6 Michal Humpula 2013-12-05 19:21:32 UTC
Git commit 9d06f5bcdc4a28b7f58028e4d3f7a31a26a7c9e1 by Michal Humpula.
Committed on 29/11/2013 at 19:31.
Pushed by michalhumpula into branch 'master'.

vi-mode: make Finnish keyboard work properly

This commit is potentionally breaking non-latin keyboards
behaviour. On the other hand tests for it are not present
and manual confirmation in vim/gvim also failed.

REVIEW: 114212

M  +3    -147  part/vimode/katevikeyparser.cpp
M  +0    -1    part/vimode/katevikeyparser.h
M  +17   -0    tests/vimode_test.cpp
M  +1    -0    tests/vimode_test.h

http://commits.kde.org/kate/9d06f5bcdc4a28b7f58028e4d3f7a31a26a7c9e1
Comment 7 Michal Humpula 2013-12-29 15:31:24 UTC
*** Bug 329370 has been marked as a duplicate of this bug. ***