vi-mode: make Finnish keyboard work properly

This commit is potentionally breaking non-latin keyboards
behaviour. On the other hand tests for it are not present
and manual confirmation in vim/gvim also failed.

REVIEW: 114212
BUG: 298726