part/vimode/katevikeyparser.h
@@ -47,7 +47,6 @@ public:
   const QString decodeKeySequence( const QString &keys ) const;
   QString qt2vi( int key ) const;
   int vi2qt( const QString &keypress ) const;
-  char scanCodeToChar(quint32 code, Qt::KeyboardModifiers modifiers, bool isLetter) const;
   const QChar KeyEventToQChar(const QKeyEvent &keyEvent);
 
   void setAltGrStatus( bool active ) { m_altGrPressed = active; }
